ingress-gateways/virtual-service-secure.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - booking.example.com
  gateways:
  - secure-booking-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: booking-service
